<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayoutMain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_vertical_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05" />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_vertical_left2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.07" />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_vertical_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95" />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_vertical_middle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_mid_vertical_10percent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1" />

<!--
    <TextView
        android:id="@+id/fragment_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fragment_about_title"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/guideline_mid_vertical_8percent"
        app:layout_constraintEnd_toStartOf="@+id/guideline_vertical_middle"
        app:layout_constraintStart_toStartOf="@+id/guideline_vertical_left" />
-->

    <TextView
        android:id="@+id/Static_AppVersion"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="@string/fragment_about_add_version"
        style="@style/Textview"
        app:layout_constraintEnd_toStartOf="@+id/guideline_vertical_middle"
        app:layout_constraintStart_toStartOf="@+id/guideline_vertical_left"
        app:layout_constraintTop_toTopOf="@+id/guideline_mid_vertical_10percent" />
    <TextView
        android:id="@+id/AppVersion"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/fragment_about_version"
        app:layout_constraintEnd_toStartOf="@+id/guideline_vertical_right"
        app:layout_constraintStart_toStartOf="@+id/guideline_vertical_left2"
        app:layout_constraintTop_toBottomOf="@+id/Static_AppVersion" />


    <TextView
        android:id="@+id/Static_AppName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        android:text="@string/fragment_about_add_name"
        style="@style/Textview"
        app:layout_constraintEnd_toStartOf="@+id/guideline_vertical_middle"
        app:layout_constraintStart_toStartOf="@+id/guideline_vertical_left"
        app:layout_constraintTop_toBottomOf="@+id/AppVersion" />
    <TextView
        android:id="@+id/AppName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/fragment_about_name"
        app:layout_constraintEnd_toStartOf="@+id/guideline_vertical_right"
        app:layout_constraintStart_toStartOf="@+id/guideline_vertical_left2"
        app:layout_constraintTop_toBottomOf="@+id/Static_AppName" />


    <TextView
        android:id="@+id/Static_AppDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="@string/fragment_about_add_description"
        style="@style/Textview"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toStartOf="@+id/guideline_vertical_middle"
        app:layout_constraintStart_toStartOf="@+id/guideline_vertical_left"
        app:layout_constraintTop_toBottomOf="@+id/AppName" />
    <TextView
        android:id="@+id/AppDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/fragment_about_description"
        app:layout_constraintEnd_toStartOf="@+id/guideline_vertical_right"
        app:layout_constraintStart_toStartOf="@+id/guideline_vertical_left2"
        app:layout_constraintTop_toBottomOf="@+id/Static_AppDescription" />


    <TextView
        android:id="@+id/Static_AppContributors"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        android:text="@string/fragment_about_add_contributors"
        style="@style/Textview"
        app:layout_constraintEnd_toStartOf="@+id/guideline_vertical_middle"
        app:layout_constraintStart_toStartOf="@+id/guideline_vertical_left"
        app:layout_constraintTop_toBottomOf="@+id/AppDescription" />
    <TextView
        android:id="@+id/AppContributors"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/fragment_about_contributors"
        app:layout_constraintEnd_toStartOf="@+id/guideline_vertical_right"
        app:layout_constraintStart_toStartOf="@+id/guideline_vertical_left2"
        app:layout_constraintTop_toBottomOf="@+id/Static_AppContributors" />

    <TextView
        android:id="@+id/Static_AppUUID"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        android:text="@string/fragment_about_add_UUID"
        style="@style/Textview"
        app:layout_constraintEnd_toStartOf="@+id/guideline_vertical_middle"
        app:layout_constraintStart_toStartOf="@+id/guideline_vertical_left"
        app:layout_constraintTop_toBottomOf="@+id/AppContributors" />
    <TextView
        android:id="@+id/tvUUID"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/fragment_about_UUID"
        app:layout_constraintEnd_toStartOf="@+id/guideline_vertical_right"
        app:layout_constraintStart_toStartOf="@+id/guideline_vertical_left2"
        app:layout_constraintTop_toBottomOf="@+id/Static_AppUUID" />

</androidx.constraintlayout.widget.ConstraintLayout>