<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cvActivity"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    app:cardElevation="6dp">

    <LinearLayout
        android:id="@+id/llLine"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="5dp">

        <TextView
            android:id="@+id/tvName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/card_view_name"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:textAllCaps="true"/>
        <LinearLayout
            android:id="@+id/llHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp">
            <TextView
                android:id="@+id/addAmount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:layout_marginStart="10dp"
                android:text="@string/card_view_activity_addAmount"
                android:textSize="17sp"
                android:textStyle="italic"/>
            <TextView
                android:id="@+id/tvAmount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:text="@string/card_view_amount"
                android:textSize="20sp"
                android:textStyle="italic"/>
        </LinearLayout>
    </LinearLayout>


</androidx.cardview.widget.CardView>