<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InputMealFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_vertical_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_vertical_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_vertical_middle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_mid_vertical_10percent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_mid_vertical_15percent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.15" />
<!--
    <TextView
        android:id="@+id/fragment_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fragment_input_meal_title"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/guideline_mid_vertical_15percent"
        app:layout_constraintEnd_toStartOf="@+id/guideline_vertical_middle"
        app:layout_constraintStart_toStartOf="@+id/guideline_vertical_left"
        app:layout_constraintTop_toTopOf="@+id/guideline_mid_vertical_8percent" />
-->
    <TextView
        android:id="@+id/fragment_desc"
        style="@style/Textview"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:text="@string/fragment_input_meal_description"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/guideline_mid_vertical_15percent"
        app:layout_constraintEnd_toStartOf="@+id/guideline_vertical_right"
        app:layout_constraintStart_toStartOf="@+id/guideline_vertical_left"
        app:layout_constraintTop_toTopOf="@+id/guideline_mid_vertical_10percent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        app:layout_constraintEnd_toStartOf="@+id/guideline_vertical_right"
        app:layout_constraintStart_toStartOf="@+id/guideline_vertical_left"
        app:layout_constraintTop_toBottomOf="@+id/fragment_desc">

        <AutoCompleteTextView
            android:id="@+id/foods_tr"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textAllCaps="true"
            style="@style/Textview"
            android:inputType="none"
            android:text="@string/input_foods_from_rv" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/enter_food_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        style="@style/Textview"
        android:text="@string/fragment_input_meal_addFood"
        app:layout_constraintStart_toEndOf="@+id/guideline_vertical_middle"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />

    <EditText
        android:id="@+id/addFoodName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toStartOf="@+id/guideline_vertical_right"
        app:layout_constraintStart_toStartOf="@+id/guideline_vertical_left"
        app:layout_constraintTop_toBottomOf="@+id/enter_food_text" />

    <TextView
        android:id="@+id/enter_calories"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fragment_input_meal_addCalories"
        android:layout_marginTop="25dp"
        style="@style/Textview"
        app:layout_constraintStart_toEndOf="@+id/guideline_vertical_middle"
        app:layout_constraintTop_toBottomOf="@+id/addFoodName" />

    <EditText
        android:id="@+id/addFoodCalories"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:text=""
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toStartOf="@+id/guideline_vertical_right"
        app:layout_constraintStart_toStartOf="@+id/guideline_vertical_left"
        app:layout_constraintTop_toBottomOf="@+id/enter_calories" />

    <TextView
        android:id="@+id/enter_weight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fragment_input_meal_addWeight"
        style="@style/Textview"
        android:layout_marginTop="25dp"
        app:layout_constraintStart_toEndOf="@+id/guideline_vertical_middle"
        app:layout_constraintTop_toBottomOf="@+id/addFoodCalories" />

    <EditText
        android:id="@+id/addWeight"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toStartOf="@+id/guideline_vertical_right"
        app:layout_constraintStart_toStartOf="@+id/guideline_vertical_left"
        app:layout_constraintTop_toBottomOf="@+id/enter_weight" />

    <Button
        android:id="@+id/addMealBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/fragment_input_meal_addMealBtn"
        app:layout_constraintStart_toEndOf="@+id/guideline_vertical_middle"
        app:layout_constraintTop_toBottomOf="@+id/addWeight" />

</androidx.constraintlayout.widget.ConstraintLayout>