<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InputActivityFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_vertical_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_vertical_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_vertical_middle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_mid_vertical_10percent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.10" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_mid_vertical_15percent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.15" />
    <!--
    <TextView
        android:id="@+id/fragment_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fragment_input_activity_title"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/guideline_mid_vertical_15percent"
        app:layout_constraintEnd_toStartOf="@+id/guideline_vertical_middle"
        app:layout_constraintStart_toStartOf="@+id/guideline_vertical_left"
        app:layout_constraintTop_toTopOf="@+id/guideline_mid_vertical_8percent" />
-->
    <TextView
        android:id="@+id/fragment_desc"
        style="@style/Textview"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/fragment_input_activity_description"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/guideline_mid_vertical_15percent"
        app:layout_constraintEnd_toStartOf="@+id/guideline_vertical_right"
        app:layout_constraintStart_toStartOf="@+id/guideline_vertical_left"
        app:layout_constraintTop_toTopOf="@+id/guideline_mid_vertical_10percent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@+id/guideline_vertical_right"
        app:layout_constraintStart_toStartOf="@+id/guideline_vertical_left"
        app:layout_constraintTop_toTopOf="@+id/guideline_mid_vertical_15percent">

        <AutoCompleteTextView
            android:id="@+id/activitytr"
            style="@style/Textview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:inputType="none"
            android:text="@string/input_activites_from_rv"
            android:textAllCaps="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/enter_activity_text"
        style="@style/Textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fragment_input_activity_addActivity"
        app:layout_constraintStart_toStartOf="@+id/guideline_vertical_middle"
        app:layout_constraintTop_toTopOf="@+id/addActivity" />

    <EditText
        android:id="@+id/addActivity"
        android:layout_width="351dp"
        android:layout_height="77dp"
        app:layout_constraintEnd_toStartOf="@+id/guideline_vertical_right"
        app:layout_constraintStart_toStartOf="@+id/guideline_vertical_middle"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />

    <TextView
        android:id="@+id/enter_calories"
        style="@style/Textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/fragment_input_activity_addCalories"
        app:layout_constraintStart_toEndOf="@+id/guideline_vertical_middle"
        app:layout_constraintTop_toBottomOf="@+id/addActivity" />

    <EditText
        android:id="@+id/addActivityCalories"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:inputType="number"
        app:layout_constraintEnd_toStartOf="@+id/guideline_vertical_right"
        app:layout_constraintStart_toStartOf="@+id/guideline_vertical_left"
        app:layout_constraintTop_toBottomOf="@+id/enter_calories" />

    <Button
        android:id="@+id/addActivityBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/fragment_input_activity_addActivityBtn"
        app:layout_constraintStart_toEndOf="@+id/guideline_vertical_middle"
        app:layout_constraintTop_toBottomOf="@+id/addActivityCalories" />

</androidx.constraintlayout.widget.ConstraintLayout>