<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_vertical_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05" />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_vertical_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95" />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_vertical_middle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_mid_vertical_8percent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.08" />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_mid_vertical_92percent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.92" />

    <TextView
        android:id="@+id/enter_meal_goal_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        style="@style/Textview"
        android:text="@string/fragment_settings_addMealGoal"
        app:layout_constraintStart_toStartOf="@+id/guideline_vertical_left"
        app:layout_constraintTop_toBottomOf="@+id/guideline_mid_vertical_8percent" />

    <EditText
        android:id="@+id/addMealGoal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:inputType="number"
        app:layout_constraintEnd_toStartOf="@+id/guideline_vertical_right"
        app:layout_constraintStart_toStartOf="@+id/guideline_vertical_left"
        app:layout_constraintTop_toBottomOf="@+id/enter_meal_goal_text" />

    <TextView
        android:id="@+id/enter_activity_goal_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        style="@style/Textview"
        android:text="@string/fragment_settings_addActivityGoal"
        app:layout_constraintStart_toStartOf="@+id/guideline_vertical_left"
        app:layout_constraintTop_toBottomOf="@+id/addMealGoal" />

    <EditText
        android:id="@+id/addActivityGoal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:inputType="number"
        app:layout_constraintEnd_toStartOf="@+id/guideline_vertical_right"
        app:layout_constraintStart_toStartOf="@+id/guideline_vertical_left"
        app:layout_constraintTop_toBottomOf="@+id/enter_activity_goal_text" />

    <TextView
        android:id="@+id/switchThemeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/swapThemesButton"
        style="@style/Textview"
        app:layout_constraintBottom_toBottomOf="@+id/switchTheme"
        app:layout_constraintTop_toTopOf="@+id/switchTheme"
        app:layout_constraintEnd_toStartOf="@+id/guideline_vertical_middle"
        app:layout_constraintStart_toStartOf="@+id/guideline_vertical_left" />


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/switchTheme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/mode_icon"
        app:fabSize="mini"
        app:layout_constraintBottom_toTopOf="@+id/guideline_mid_vertical_92percent"
        app:layout_constraintStart_toStartOf="@+id/guideline_vertical_middle" />
</androidx.constraintlayout.widget.ConstraintLayout>